--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -51,19 +51,19 @@ jobs:
         uses: 'actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11' # ratchet:actions/checkout@v4
 
       - name: 'Setup Go'
-        uses: 'actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe' # ratchet:actions/setup-go@v4
+        uses: 'actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491' # ratchet:actions/setup-go@v5
         with:
-          go-version: '1.21'
+          go-version-file: 'go.mod'
 
       - name: 'Build Guardian'
-        uses: 'goreleaser/goreleaser-action@5fdedb94abba051217030cc86d4523cf3f02243d' # ratchet:goreleaser/goreleaser-action@v4
+        uses: 'goreleaser/goreleaser-action@7ec5c2b0c6cdda6e8bbb49444bc797dd33d74dd8' # ratchet:goreleaser/goreleaser-action@v5
         with:
           distribution: 'goreleaser'
           version: 'v1.18.2'
           args: 'build --snapshot --single-target --clean --id guardian --output dist/guardian'
 
       - name: 'Upload Guardian Binary'
-        uses: 'actions/upload-artifact@26f96dfa697d77e81fd5907df203aa23a56210a8' # ratchet:actions/upload-artifact@v4
+        uses: 'actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3' # ratchet:actions/upload-artifact@v4
         with:
           name: 'guardian'
           path: 'dist/guardian'
@@ -86,7 +86,7 @@ jobs:
           ref: '${{ github.event.pull_request.head.sha }}'
 
       - name: 'Download Guardian'
-        uses: 'actions/download-artifact@6b208ae046db98c579e8a3aa621ab581ff575935' # ratchet:actions/download-artifact@v4
+        uses: 'actions/download-artifact@c850b930e6ba138125429b7e5c93fc707a7f8427' # ratchet:actions/download-artifact@v4
         with:
           name: 'guardian'
           path: '${{ runner.temp }}/.guardian'
@@ -143,13 +143,13 @@ jobs:
           ref: '${{ github.event.pull_request.head.sha }}'
 
       - name: 'Authenticate to Google Cloud'
-        uses: 'google-github-actions/auth@5a50e581162a13f4baa8916d01180d2acbc04363' # ratchet:google-github-actions/auth@v2
+        uses: 'google-github-actions/auth@55bd3a7c6e2ae7cf1877fd1ccb9d54c0503c457c' # ratchet:google-github-actions/auth@v2
         with:
           workload_identity_provider: '${{ env.GUARDIAN_WIF_PROVIDER }}'
           service_account: '${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
 
       - name: 'Setup Terraform'
-        uses: 'abcxyz/secure-setup-terraform@4d361110d3718e05b118be20051ba2855a2cc9e1' # ratchet:abcxyz/secure-setup-terraform@main
+        uses: 'abcxyz/secure-setup-terraform@b0cb5a1a1fee66b3bcfe2f1b67113a8802328b35' # ratchet:abcxyz/secure-setup-terraform@main
         with:
           terraform_version: '${{ env.GUARDIAN_TERRAFORM_VERSION }}'
           terraform_module_location: './${{ matrix.working_directory }}'
@@ -158,7 +158,7 @@ jobs:
           terraform_wrapper: false
 
       - name: 'Download Guardian'
-        uses: 'actions/download-artifact@6b208ae046db98c579e8a3aa621ab581ff575935' # ratchet:actions/download-artifact@v4
+        uses: 'actions/download-artifact@c850b930e6ba138125429b7e5c93fc707a7f8427' # ratchet:actions/download-artifact@v4
         with:
           name: 'guardian'
           path: '${{ runner.temp }}/.guardian'
@@ -200,7 +200,7 @@ jobs:
           ref: '${{ github.event.pull_request.head.sha }}'
 
       - name: 'Download Guardian'
-        uses: 'actions/download-artifact@6b208ae046db98c579e8a3aa621ab581ff575935' # ratchet:actions/download-artifact@v4
+        uses: 'actions/download-artifact@c850b930e6ba138125429b7e5c93fc707a7f8427' # ratchet:actions/download-artifact@v4
         with:
           name: 'guardian'
           path: '${{ runner.temp }}/.guardian'
@@ -246,13 +246,13 @@ jobs:
         uses: 'actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11' # ratchet:actions/checkout@v4
 
       - name: 'Authenticate to Google Cloud'
-        uses: 'google-github-actions/auth@5a50e581162a13f4baa8916d01180d2acbc04363' # ratchet:google-github-actions/auth@v2
+        uses: 'google-github-actions/auth@55bd3a7c6e2ae7cf1877fd1ccb9d54c0503c457c' # ratchet:google-github-actions/auth@v2
         with:
           workload_identity_provider: '${{ env.GUARDIAN_WIF_PROVIDER }}'
           service_account: '${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
 
       - name: 'Setup Terraform'
-        uses: 'abcxyz/secure-setup-terraform@4d361110d3718e05b118be20051ba2855a2cc9e1' # ratchet:abcxyz/secure-setup-terraform@main
+        uses: 'abcxyz/secure-setup-terraform@b0cb5a1a1fee66b3bcfe2f1b67113a8802328b35' # ratchet:abcxyz/secure-setup-terraform@main
         with:
           terraform_version: '${{ env.GUARDIAN_TERRAFORM_VERSION }}'
           terraform_module_location: './${{ matrix.working_directory }}'
@@ -261,7 +261,7 @@ jobs:
           terraform_wrapper: false
 
       - name: 'Download Guardian'
-        uses: 'actions/download-artifact@6b208ae046db98c579e8a3aa621ab581ff575935' # ratchet:actions/download-artifact@v4
+        uses: 'actions/download-artifact@c850b930e6ba138125429b7e5c93fc707a7f8427' # ratchet:actions/download-artifact@v4
         with:
           name: 'guardian'
           path: '${{ runner.temp }}/.guardian'
