--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -213,8 +213,8 @@ jobs:
           wait
 
           FILES="$(find ./* -name '*.tar.gz' -o -name '*.zip')"
-          sha256sum "${FILES}" > SHA256SUMS
-          sha512sum "${FILES}" > SHA512SUMS
+          sha256sum ''${FILES}'' > SHA256SUMS
+          sha512sum ''${FILES}'' > SHA512SUMS
 
       - name: 'Upload binaries'
         env:
