--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -189,7 +189,7 @@ jobs:
         run: |-
           cd dist/
 
-          while IFS= read -r -d '' BINARY; do
+          while IFS= read -r BINARY; do
             chmod +x "${BINARY}"
 
             FOLDER="$(basename "${BINARY}" ".exe")"
@@ -209,12 +209,11 @@ jobs:
               mv "${BINARY}" "${NAME}"
               (tar -czvf "${FOLDER}.tar.gz" "${NAME}" && rm -rf "${NAME}") &
             fi
-          done <   <(find ./* -type f)
+          done <   <(find * -type f)
           wait
 
-          FILES="$(find ./* -name '*.tar.gz' -o -name '*.zip')"
-          sha256sum ${FILES} > SHA256SUMS
-          sha512sum ${FILES} > SHA512SUMS
+          sha256sum $(find * -name '*.tar.gz' -o -name '*.zip') > SHA256SUMS
+          sha512sum $(find * -name '*.tar.gz' -o -name '*.zip') > SHA512SUMS
 
       - name: 'Upload binaries'
         env:
