--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ env:
   GUARDIAN_BUCKET_NAME: 'guardian-ci-i-guardian-state-c79e1f4759'
   GUARDIAN_TERRAFORM_VERSION: '1.7.1'
   GUARDIAN_TAGREP_VERSION: '0.0.7'
+  GITHUB_REPOSITORY: 'abcxyz/guardian-staging'
 
 jobs:
   go_test:
@@ -70,6 +71,7 @@ jobs:
             -input=guardian_wif_provider="${{ env.GUARDIAN_WIF_PROVIDER }}" \
             -input=guardian_service_account="${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}" \
             -input=guardian_state_bucket="${{ env.GUARDIAN_BUCKET_NAME }}" \
+            -input=github_repository="${{ env.GITHUB_REPOSITORY }}" \
             -accept-defaults \
             ./abc.templates/base-workflows
           abc templates render \
